# faunadb-rust

./: Cargo.toml  README.md  todo.org
examples/: create_function.rs  create_index.rs  create_instance.rs  delete_instance.rs  get_instance.rs  misc.rs  simple_client.rs
src/: client.rs  error.rs  expr.rs  lib.rs  macros.rs  prelude.rs  query.rs  serde.rs  test_utils.rs
src/client/: response.rs  sync.rs
src/client/response/: index.rs  value.rs
src/expr/: array.rs  class.rs  index.rs  number.rs  object.rs  permission.rs  reference.rs  set.rs
src/query/: auth.rs  basic.rs  collection.rs  cond.rs  conversion.rs  create.rs  create_class.rs  create_database.rs  create_index.rs  datetime.rs  delete.rs  do_many.rs  get.rs  lambda.rs  let_var.rs  logical.rs  map.rs  math.rs  misc.rs  read.rs  set.rs  string.rs  var.rs  write.rs
src/query/write/: create.rs  create_class.rs  create_database.rs  create_function.rs  create_index.rs  create_key.rs  insert.rs  update.rs
src/serde/: base64_bytes.rs  ts_microseconds.rs
