[package]
name = "faunadb"
version = "0.1.0"
authors = ["Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.10"
hyper = "0.12"
hyper-tls = "0.3"
tokio = "0.1"
tokio-timer = "0.2"
futures = "0.1"
failure = "0.1"
failure_derive = "0.1"
native-tls = "0.2"
log = "0.4"
http = "0.1"
