[package]
name = "faunadb"
version = "0.0.6"
authors = ["Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"
readme  = "README.md"
license = "Apache-2.0"
description = "A Client for Fauna Database"
repository  = "https://github.com/prisma/faunadb-rust/"
homepage    = "https://github.com/prisma/faunadb-rust/"
keywords    = ["fauna", "faunadb", "database", "async"]
documentation = "https://docs.rs/faunadb/"

[features]
default = ["sync_client"]
sync_client = ["tokio"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64-serde = "0.3"
base64 = "0.10"
hyper = "0.12"
hyper-tls = "0.3"
tokio-timer = "0.2"
futures = "0.1"
failure = "0.1"
failure_derive = "0.1"
native-tls = "0.2"
log = "0.4"
http = "0.1"
lazy_static = "1.3"
tokio = { version = "0.1", optional = true }

[dev-dependencies]
clap = "2"
pretty_env_logger = "0.3"
tokio = "0.1"
rand = "0.6"
lazy_static = "1.3"
