[package]
name = "faunadb"
version = "0.0.11"
authors = ["Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"
readme  = "README.md"
license = "Apache-2.0"
description = "A Client for Fauna Database"
repository  = "https://github.com/prisma/faunadb-rust/"
homepage    = "https://github.com/prisma/faunadb-rust/"
keywords    = ["fauna", "faunadb", "database", "async"]
documentation = "https://docs.rs/faunadb/"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64-serde = "0.3"
base64 = "0.10"
hyper = "0.13.0-alpha.1"
hyper-tls = "0.4.0-alpha.1"
futures-preview = "0.3.0-alpha.18"
failure = "0.1"
failure_derive = "0.1"
native-tls = "0.2"
log = "0.4"
http = "0.1"
lazy_static = "1.3"
async-std = { version = "0.99.5", features = ["unstable"] }

[dev-dependencies]
clap = "2"
pretty_env_logger = "0.3"
tokio = "0.2.0-alpha.4"
rand = "0.6"
lazy_static = "1.3"
